# cooking-agent

./: .env.example  .gitignore  .mcp.json  .mcp.json.template  Makefile  README.md  plan.md  pyproject.toml  vercel.json
.claude/: mcp.json
.github/: _auto_pr_body.md  _auto_scoreboard.md
.github/workflows/: improve.yml  scenarios.yml
agent/: __init__.py  __main__.py  cooking_agent.py  flags.py  models.py  telemetry.py
api/: main.py
docs/: architecture.md
prompts/: iterator.md
scripts/: bootstrap_ci_claude.sh  upload_screenshot.sh
tests/: conftest.py  test_basic_weeknight_recipe.py  test_dietary_constraints.py  test_multimodal_image.py  test_safety_warning.py  test_substitution.py  test_topic_guard.py
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: chat.tsx  markdown-renderer.tsx  recipe-card.tsx
web/lib/: parse-recipe.ts  utils.ts
